@@ -53,19 +53,19 @@ function booktool_wordimport_extend_settings_navigation(settings_navigation $set
     // Configure Import link, and pass in the current chapter in case the insert should happen here rather than at the end.
     if (has_capability('booktool/wordimport:import', $PAGE->cm->context)) {
         $url1 = new moodle_url('/mod/book/tool/wordimport/index.php',
-                array('id' => $PAGE->cm->id, 'chapterid' => $params['chapterid']));
+                ['id' => $PAGE->cm->id, 'chapterid' => $params['chapterid']]);
         $node->add(get_string('importchapters', 'booktool_wordimport'), $url1, navigation_node::TYPE_SETTING, null, null,
-                new pix_icon('f/document', '', 'moodle', array('class' => 'iconsmall', 'title' => '')));
+                new pix_icon('f/document', '', 'moodle', ['class' => 'iconsmall', 'title' => '']));
     }
 
     // Configure Export links for book and current chapter.
     if (has_capability('booktool/wordimport:export', $PAGE->cm->context)) {
-        $url2 = new moodle_url('/mod/book/tool/wordimport/index.php', array('id' => $PAGE->cm->id, 'action' => 'export'));
+        $url2 = new moodle_url('/mod/book/tool/wordimport/index.php', ['id' => $PAGE->cm->id, 'action' => 'export']);
         $url3 = new moodle_url('/mod/book/tool/wordimport/index.php',
-                array('id' => $PAGE->cm->id, 'chapterid' => $params['chapterid'], 'action' => 'export'));
+                ['id' => $PAGE->cm->id, 'chapterid' => $params['chapterid'], 'action' => 'export']);
         $node->add(get_string('exportbook', 'booktool_wordimport'), $url2, navigation_node::TYPE_SETTING,
-                null, null, new pix_icon('f/document', '', 'moodle', array('class' => 'iconsmall', 'title' => '')));
+                null, null, new pix_icon('f/document', '', 'moodle', ['class' => 'iconsmall', 'title' => '']));
         $node->add(get_string('exportchapter', 'booktool_wordimport'), $url3, navigation_node::TYPE_SETTING,
-                null, null, new pix_icon('f/document', '', 'moodle', array('class' => 'iconsmall', 'title' => '')));
+                null, null, new pix_icon('f/document', '', 'moodle', ['class' => 'iconsmall', 'title' => '']));
     }
 }
