@@ -30,7 +30,7 @@ if ($ADMIN->fulltree) {
     $desc = new lang_string('heading1stylelevel_desc', 'booktool_wordimport');
     // Default to h3.
     $default = 3;
-    $options = array_combine(range(1, 6), array('h1', 'h2', 'h3', 'h4', 'h5', 'h6'));
+    $options = array_combine(range(1, 6), ['h1', 'h2', 'h3', 'h4', 'h5', 'h6']);
 
     $setting = new admin_setting_configselect('booktool_wordimport/heading1stylelevel',
                                               $name,
